grammar.txt
<program> ::= {<class>} {<function>} <main>

<type> ::= "int" | "char" | "bool" | "float" | "void" | <identifier>
<identifier> ::= <letter> {(<letter> | <digit>)}
<letter> ::= [a-zA-Z_]
<digit> ::= [0-9]

<literal> ::= <integer_literal> | <floating_literal> | <character_literal> | <boolean_literal> | <string_literal>

<digit_sequence> ::= <digit> {<digit>}
<integer_literal> ::=<digit_sequence>
<floating_literal> ::=<digit_sequence> "." <digit_sequence>

<character_literal> ::= "'" <character> "'"
<string_literal> ::= "\"" {<character>} "\""
<character> ::= []

<boolean_literal> ::= "true" | "false"

<declaration_statement> ::= <variable_declaration> | <array_declaration>

<variable_declaration> ::= <type> <identifier>
<array_declaration> ::= <type> <identifier> "[" <digit_sequence> "]"


<statement> ::= <declaration_statement> ";"
               | <expression> ";"
               | <if_statement>
               | <while_statement>
               | <for_statement>
               | "return" [<expression>] ";"
               | "break" ";"
               | "continue" ";"
               | <print_statement>
               | <read_statement>
               | {<statement>}

<for_statement> ::= "for" "(" <variable_declaration> "=" <expression> ";" <expression> ";" <expression> ")" "{" <statement> "}"

<if_statement> ::= "if" "(" <expression> ")" "{" <statement> "}" ["else" ("{"<statement>"}" | <if_statement>)]

<while_statement> ::= "while" "(" <expression> ")" "{" <statement> "}"

<print_statement> ::= "print" "(" <expression> ");"
<read_statement> ::= "read" "(" <l> | <identifier> "." <identifier> ");"


Все операции и их приоритеты
1. вызов функции индексирование
2. ++ -- (префиксные) ! ~ -
3. * / %
4. + -
5. >> <<
6. > < <= >=
7. == !=
8. &
9. ^
10. |
11. &&
12. ||
13. =
14. , или ` - не может в одном выражении и то и другое вне скобок

<expression> ::= <,expression> | <`expression>

<,expression> ::= <=expression> {("," <=expression>)}
<`expression> ::= <=expression> {("`" <=expression>)}

<=expression> ::= [<l> "="] <||_expression>

<||_expression> ::= <&&expression> {"||" <&&expression>}
<&&expression> ::= <|expression> {"&&" <|expression>}

<|expression> ::= <^expression> {"|" <^expression>}
<^expression> ::= <&expression> {"^" <&expression>}
<&expression> ::= <==expression> {"&" <==expression>}

<==expression> ::= <<expression> {("==" | "!=") <<expression>}
<<expression> ::= <<<expression> {("<" | ">" | "<=" | ">=") <<<expression>}

<<<expression> ::= <+expression> {("<<" | ">>") <+expression>}

<+expression> ::= <*expression> {("+" | "-") <*expression>}
<*expression> ::= <!expression> {("*" | "/" | "%") <!expression>}

<!expression> ::= {("++" | "--" | "-" | "!" | "~")} <primary_expression> | <literal>

<primary_expression> ::= "(" <expression> ")" | <l> | <identifier> "." <identifier>

<l> ::= <identifier> | <identifier> "[" <l> | <identifier> "." <identifier>  "]"


<class> ::= "class" <identifier> <class_body>
<class_body> ::= "{" {<declaration_statement>} {<constructor>} {<function>} "}"
<constructor> ::= "constructor" <parameters> "{" <statement> "}"

<function> ::= <type> <identifier> <parameters> "{" <statement> "}"
<parameters> ::= "(" <type> <identifier> {"," <type> <identifier>} ")" | "(" ")"

<main> ::= "main" <parameters> "{" <statement> "}"
